# unified_embedder

./: .gitignore  .stignore  AGENTS.md  CLAUDE.md  PROJECT_OVERVIEW.md  PROJECT_ROADMAP.md  README.md  REFERENCE_EXTRACTION_README.md  TASK_TRACKER.md  TodoWrite_Log.md  check_library_updates.py  claude_emedding_evaluation.md  colbert_integration.py  colbert_qdrant_schema.py  colbert_token_embedder.py  deduplication.py  diagnose_qdrant.py  enhanced_docling_converter.py  err.txt  err_test_retrieval.txt  extract_reference_code_generic.py  hello.py  hybrid_qdrant_store.py  manage_reference_libraries.py  meeting_saved_new_chat.txt  monitored_retrieval.py  multi_vector_retrieval.py  ocr_quality_checker.py  performance_benchmark.py  performance_monitor.py  performance_optimizer.py  pipeline_wrapper.py  pyproject.toml  qti-to-text-converter.py  query_expansion.py  reranking.py  retrieval_engine.py  run_embedder.sh  setup_ubuntu.sh  start_qdrant_docker.sh  (+8 more)
docs/: DECISION_LOG.md  DOCS_INDEX.md  GPT_Msg_re_tokenizer.md  prompt_for_gpt-5-codex-high.md
logs/: benchmark_results.json  err_embedder701917.txt  err_embedder_colbert_test.txt  out_embedder701917.txt  out_embedder_PDF_ColBERT.txt  out_embedder_colbert_test.txt  skipped_files_20250915_170156.json  skipped_files_20250915_211748.json
reference_library_code/: EXTRACTION_REPORT.md
reference_library_code/jeepney/: .gitlab-ci.yml  .readthedocs.yaml
reference_library_code/jeepney/jeepney/: auth.py
test_docs/: test_amnesia.txt
